--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.2",
     "file-loader": "^6.0.0",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^4.2.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "px2rem-loader": "^0.1.9",
+    "raw-loader": "^0.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "style-loader": "^1.1.3",
@@ -38,7 +40,6 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "lib-flexible": "^0.3.2",
-    "raw-loader": "^0.5.1"
+    "lib-flexible": "^0.3.2"
   }
 }
